@@ -34,6 +34,8 @@ DIST elfutils-0.158-robustify.patch 62790 SHA256 dde94387e6565803d7c8d5b4351e422
 DIST elfutils-0.158.tar.bz2 4931570 SHA256 be27af5c21352f53e010342bf1c68e0b9e18232dbf3adec7e2f9b41f6bbe397d SHA512 6f27c07ad2b146d2ff857ad596f0d9150b0a041b4667f9174880a7766250ba2e52103bed9c4295e005255b683346d33d82efcda8f18f66c343df2722ca5d2ca2 WHIRLPOOL ff0c2224f9a514b83995c6f5a628e1331887e3906d3678c237c551d5572371b5a4c8bcf705f8e1389bff02bdab257460b26d8cfd3b3de2cbbc84e3f5a55445ac
 DIST elfutils-0.159-portability.patch 63319 SHA256 aaaa91cc9101962cdef221b2901346921945bf6e8b7806dbf99c5c2d76dc3ae0 SHA512 043ef48ea0f2cec718d952d7137e16f34c47420b7d1788a9e1685b3543576f8d4a9f8565069709ab87a1b65d32204db01da4e0f08be51c5d8a5890c548369568 WHIRLPOOL e690f510ebe97562dbee233b146481b56fb589c7ed7e99eafd121c3990f084d6adb58fc4db0824518a84cd609a0a10a65f125697f51819b18dfcd3e691c1abd9
 DIST elfutils-0.159.tar.bz2 5469000 SHA256 fffaad1ba0c4ac5c8cee56dc195746e1f1e7197ba3eba7052ad5a3635ac1242e SHA512 c58d95c90685fb0b37f728c83e9d462be2fabe1dfb7b271b3adcde5f10c532a90b07bcc1c51dd81bf768f0cd3d22fa231fafb74fb5e79098d94a566e139408ff WHIRLPOOL 71cc156658af3ea8461c4cebcf27331a3844af470e337c18a7532fd795ea91eca035ecdc74fa71e92100bf2354b9e724490eae6305cd3ab418202938a4818684
+DIST elfutils-0.160-portability.patch 63302 SHA256 feb307acf472598ea7af4e4b439251613a8f5d81e804b4abf9aeca195a5d4254 SHA512 a408596fe114392034c7c6f42c4ef2e7a6bdeae346ad07c733eebe29c30d644984d775756b0395ab360c6107eab7d526cdcd0d4955eb8431cccf9ca8a278bca1 WHIRLPOOL cd415d959c8fdf16ea656de84c7e328bb98de1f9b98ba36bdafffca80a008c3673787843b876f6ddd37e1bc0d13283ed85548b5407c90120de164971cee6ae44
+DIST elfutils-0.160.tar.bz2 5391252 SHA256 741b556863c069ceab2d81eb54aeda8c34f46728859704eaf9baef8503e9a9d1 SHA512 2df392739ae05e1a9ad333a02cc13e088f39370e3d14482072384b0b5285d5ba73e35562cc6c99211272f36744e657081d6d18e16e8c8519e49a51ece9151330 WHIRLPOOL afafd0c2fd2672c7b0e9cb4cdd4fc710fa38c819b7f117673e99cace7931594f03a46085a87fb4e819243572abc52f695d37cc03522bb46cdc6498be9f209582
 EBUILD elfutils-0.146.ebuild 1865 SHA256 1a85b1753d566f54a590f558564864abb45cb347d20dfb43cd927b7fba3e8009 SHA512 039a5283b6d342460a2a205c7d546e8f42d3a9c615ef768e2406fb729d4ca001ffe7c7422acfeb828f0a148f68df97b4f2a2028ae4fa486e6a39e4b49f49b91f WHIRLPOOL 04872a2a2c15f9bc7955e2d655346a6137f2f40d122dc2faf226a6bc945c883d31a233af8adc517a4d9a8186d01c921aedc6d63ce0fc24069f76696543adaf3b
 EBUILD elfutils-0.148.ebuild 1881 SHA256 bd1ff4660130ad2f89925a84e2a145770d8fc3e375aa2834f8050e2e7e63cc65 SHA512 678a1e07b426b321e0b0ad0f68200c418903c7e08d9844f4ce9cb5adcea8ecb6e8f009436fbd1180847e4ccad6274f6c521cefb9019b719b4f2f1452d99a8572 WHIRLPOOL 5c9c72b4ba0847140e9b12e75f7b7099f6139dd334f83a900629773fa943df9975762f0f3b04256a8de699dafdfd052802950124990470652fd1bd9902e3e7c8
 EBUILD elfutils-0.149.ebuild 1728 SHA256 2b7fb3835eded3175ff91b5fb45f57526b7a8467c58538c85fd21d6de3ac1647 SHA512 e20141aeb66c6a1c6152dff877b5304447e1c6bba5402812374b9aa4d3b5abf894acbb177561952ddec679ba1c2d2c6bd74d209aad0c1e8238eadd97ff24c8c2 WHIRLPOOL a8ded281d1593ecb7846a9d5e6602e0650d82eb05b2d2753b6c773255a7cc0e33f5a47f3faf05eaddcb06250bb16473ccc4f59a4b485d79c8f46d224d45279fa
@@ -50,22 +52,23 @@ EBUILD elfutils-0.156.ebuild 2694 SHA256 30fd1fe7df8baa81ae3023631ad418f8a4e01d5
 EBUILD elfutils-0.157.ebuild 2579 SHA256 0d129ff586fb37f60fdebab13e9f2886623a6e7f344f602513ec24e54b50d25d SHA512 875a7c17f22639dcaadb28206ea466c8676c068e9de32d866dafc191eca02cc291f3d146cb32bbc7f37e85dee5ccd219804096cdbe52bf60d51995aebd3a3b82 WHIRLPOOL 09ef218fe21666a95a432260ca141dc3a2857d23a52dad51cdf98fecadb38a52b07edfe429d644fd8bb5b96e0484e995e596f286575130f229d0f54838a7bece
 EBUILD elfutils-0.158.ebuild 2642 SHA256 4377a641882a451677bfbb1ce3e71ccb1f8f604712cf56c8f3f4766f64ceae38 SHA512 40563766099fccd8ad76a5db5d6e6f2c928f18c9b1fe51c2f874fe8db9b9ff80647f2c9e04855c2ece4021efee7f3fd38f001d5e170678f2265edf94dc29077a WHIRLPOOL c5873c6f8d73016876f8a56da313452d0ed01a722c031cac0a347a65aa4276ce82b36bc0691de72e41bf832bcbd1d94392cb3ccfba061046ca4299ec9f50ad5d
 EBUILD elfutils-0.159.ebuild 2513 SHA256 6c037351d74c4a7066c61fc89106f34539847c2724a6f7af5b567216f7ac87b2 SHA512 1075354264cb90447676e239a7a3b20b1b0bb77bc5ffdb5d8fe5aa0134a8dc73ebb7a73dfe2f06a4ae8cf1b941de8f3ec3780430f814f3557dfd2a6022773576 WHIRLPOOL 8f72504bba17d5b6ffbdc0604e9a52bcb40c6d9a71c4b675baa9e63678b15e41a8f1a569ce0f01edc145d41e8d2aa18d3a9f058b3a6ca7f079e51ff5c738dec2
-MISC ChangeLog 25481 SHA256 06ea26d7a77ac4fcc5573e58522a9b006b82ed9fbc6fda37a7dbe62e6d321192 SHA512 8bb1dc2cf6d8fb365a4dbd72877a19992380e6ddfc9d801dd504b65955acb370c9fc037e2572e53b7a5bbc339a9ef491b85d662252a613fedb71100b604c8da5 WHIRLPOOL 7741a8d3b60fc1e98f09663b5bd526e182052148d62062cb29ffdf63cc7a94559f783eae36cc96396c876a29c3f04192e1abe88836a7b20c178f0d4b04cc1f40
+EBUILD elfutils-0.160.ebuild 2513 SHA256 def8515851f86cc2ec178b26d40474a7bbcd933c9aad8a9b64ba9674dbb43876 SHA512 1d0db5c5c0098d26fa1e398b805f7ada10dd802146b2628ff288ef1b7f8336b95ffed36dc1ddc3e05743ac1bbf3d0dd16fe52f86742c6584d038a583d224e782 WHIRLPOOL 8d83e8e16a311d610b71c3367904c88beb65ab1cf45e079273d2cdf3aabcebe4b37aba0d7e0dd03901430d6e5ac6910fd862f6c82400dbc270933e3166899a13
+MISC ChangeLog 25603 SHA256 82ddf65219b4952e245ec95ec9ef37e1ad390868b760d4c0c30337686e2a3db6 SHA512 cab1ae640a65d33668b774b2f7297e94f140a003c68a20eb4dfd08a5cd3f319f4ae60d87f7961ca7e86a66d545641526a1b4e4e09a7c74c3a3137e29cd872a5b WHIRLPOOL ed5499671570cc7e5972433dec46c1d8e7f072b3c725738fc0b703183d59a8166272862054c2b643c5c5fc0209426668cdf062b1c3f88dac052b16be0a71d474
 MISC metadata.xml 438 SHA256 33cbcbd727257fa6d03488d531c099d33f4c3e4db3cf3739d11d8d4cd8266b37 SHA512 e013123116aa3a3f00fa77cc3e9d18a5c1f481dd304ee6af6e77e3e5e44fb9e3f94ac542fc10fb0c59dea6699c15cce11b1513c061494919f1e821120fb162d9 WHIRLPOOL f07f16d5235c538cef44daca3210ad7374af35705b6562b9bb17b2a5532ba0ed6ea32d1d7f23e93c899e8868503f7a9f8994d2454ca144c45ae7e9317fb0cabd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT3RJvAAoJEPGu1DbS6WIADckQAJqb4JuYu5TYITbE1cLxgRkt
-y/mLNqyzlj3pSgIfnnHXmFbBRTfgbuEthUxZ3APyhB8JLkVMJ4rFXJ/CSq/Go9gO
-1igqTvhXuXUTU43piIDMBAg4cFqNCC11rhXvMHghi41U046qH9197Rd7VusG8rBV
-C8glCe8bUaIG9fzCk4GSfgWBaoUh/WPjWYtGO6hrdxCazo1Ka+gTQ4j7iJEmG42U
-ZJI6yX1Jxdh6z/KzXnxcSsqxj13gZZXcfhBtb3WkcYdqVmc7PfePJPzbmZA1x9Xl
-NTSjiITaF45Dnd8muY2rp6oSR9KoaEZYoe+B2t5RkJn0HUvnr9N+cJ0Eb6ko6n0g
-l0O3wIlFK2u0bNfBkZwPTkzzIhuNGRbBwPRJZV13CvoDNbTSlCNtdauzXZ3QsBEM
-3hKPdiYqFUuv3zPSVNrrxBwG4fG+X0yOjpiZmdmSOKU+16pvsWxjpv2kmKoVRvzb
-r/0cVV8cfUxUBzXVN+htsV7gWX7M2v4FlPhaYfY8+gdP8ZzGpAbQMzhOG4Dou68O
-5BH7MpepVFQgGoCuNEb5FSOuv4K9D31jY/HMS9fP1iE3rmX5G+2S4sr1cceVWc7l
-0PahtalvpgCwZr0bSobJoctzpcO5lqSm8onTCA7QOPp55TJtnanN6wY5NjA/A9NN
-9rbl1aOyouIaRhs9Rbvc
-=C1dm
+iQIcBAEBCAAGBQJUBDYnAAoJEPGu1DbS6WIA1zgP/3ye5XuVM1k1vUNK7gxI359g
+GW4lTKWtuf4LpnAuhOxlWzC3WOENX+UqnTSQt27o3HO7hpAh3wBLJxqQzi2PGMFo
+zB/0bipB1RO9VBMgF+aWCnLxaNdJJHEfdFZlHwc5EU1LaFofpcIVAysblnMhR/Jf
+6Gn2t/xij9QQ2+VPZcixEMdLkFqKCkCtp/N8t4ZwFTyA4vOjSScKpW0sbZysO4GV
+VvwYWif8B1xKfzjSA39ljK+/QXTInWbgGGgZcGamDm1IU6NyxPLc8xr7Ron0GObG
+8neSa5AEYrIvn+EwPpn3TAgIUFIIPc6/aHVwkYRZDMfG+MNmjxj3rZpfhAT+AlOW
+cVi9qdpbLFM1hU8VmnXzy9FtSUkWfdp0OuuVdhYxN/bo164pXqnKeS8VrfaY3UN6
+S+1UMrLG/9Autp5rEJFeE2LTqOBPR/M2EmRUhT5YvpaL1jQ1uK40iXXs9HE18xg4
+kY4TaKAoHNh5utGG29/qdsKL0vjWDY+cwZqF43JVplgcf0+qyf5uATTnmo6SchOb
+wJl+hxem/iXD7qTN3GRSuWSDhO98aPBNNZ8riRUCdYjyd7IDqz1h7NvEUEG2neGK
+6HYKgknxmpQZZ9QlrFA96UGp9i23Rx2hb+YLVDqWLmhSWXx66yGx0vk6rM/dweAT
+4F5shYy0Mky/tpH36d9K
+=cNlH
 -----END PGP SIGNATURE-----
