@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/elfutils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/elfutils/ChangeLog,v 1.189 2014/08/02 16:31:39 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/elfutils/ChangeLog,v 1.190 2014/09/01 09:02:16 vapier Exp $
+
+*elfutils-0.160 (01 Sep 2014)
+
+  01 Sep 2014; Mike Frysinger <vapier@gentoo.org> +elfutils-0.160.ebuild:
+  Version bump.
 
 *elfutils-0.159 (02 Aug 2014)
 
